api-gateway/deploy/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    workload.user.cattle.io/workloadselector: dm-develop-api-gateway-svc
  name: api-gateway-svc
  namespace: develop
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: dm-develop-api-gateway-svc
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: dm-develop-api-gateway-svc
    spec:
      containers:
        - env:
          - name: GIN_MODE
            value: debug
          image: 192.168.3.30:8086/mateforce/api-gateway:VERSION_NUMBER
          imagePullPolicy: Always
          name: clouddisk-svc
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m	# CPU最小是200微核
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 5000
              name: health
              protocol: TCP
            - containerPort: 8084
              name: grpc
              protocol: TCP
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
status:
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1

---
# cloud disk 服务发现
apiVersion: v1
kind: Service
metadata:
  labels:
    cattle.io/creator: norman
    name: api-gateway-svc
    namespace: develop
  name: api-gateway-svc
  namespace: develop
  ownerReferences:
  - apiVersion: apps/v1beta2
    controller: true
    kind: deployment
    name: api-gateway-svc
    uid: cf1dc754-16f0-40c9-8821-59db66e85916
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 31414
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: health
    nodePort: 30508
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: grpc
    nodePort: 31843
    port: 8084
    protocol: TCP
    targetPort: 8084
  selector:
    workload.user.cattle.io/workloadselector: dm-develop-api-gateway-svc
  type: NodePort
status:
  loadBalancer: {}


# ---
# # grpc ingress
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: GRPC
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#   name: clouddisk-grpc-ingress
#   namespace: develop
# spec:
#   rules:
#     - host: clouddisk-svc.flyele.vip
#       http:
#         paths:
#           - backend:
#               serviceName: clouddisk-svc
#               servicePort: 8084
#             path: /
#   tls:
#     - hosts:
#         - clouddisk-svc.flyele.vip
#       secretName: tls-secret-dev


---
# http ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatserver-ingress
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
      #配置websocket 需要的配置   
    nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_set_header Upgrade "websocket";
       proxy_set_header Connection "Upgrade";
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: api-gateway-svc
    nginx.org/websocket-services: api-gateway-svc
spec:
  rules:
    - host: yum.mateforce.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port: 
                  number: 9530
  # tls:
  #   - hosts:
  #       - zuyyjv.natappfree.cc
  #     secretName: tls-secret-dev
